--- a/.github/workflows/deplyoment.yml
+++ b/.github/workflows/deplyoment.yml
@@ -2,7 +2,7 @@ name: Deployment practice
 on: push
 jobs:
   lint:
-    runs on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -11,7 +11,7 @@ jobs:
       - name: Lint
         run: nmp run lint
   test:
-    runs on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -20,7 +20,7 @@ jobs:
       - name: Test code
         run: nmp run test
   deploy:
-    runs on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Get code
         uses: actions/checkout@v3
